<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MostrarContacto">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="208dp"
        android:layout_height="202dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/contacto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="357dp"
        android:layout_height="372dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.392">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/apodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/apodo"
                android:textSize="20sp"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/nombre"
                android:textSize="20sp"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/apellido1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/primer_apellido"
                android:textSize="20sp"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/apellido2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/segundo_apellido"
                android:textSize="20sp"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/telefono"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/direccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/direccion"
                android:importantForAutofill="no"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/retroceder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/purple_200"
        android:contentDescription="@string/todo"
        android:src="@drawable/retroceder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>